# jaxqsofit

./: .gitignore  README.md  jaxqsofit.py  model.py  pyproject.toml  pytest.ini  test.ipynb
.github/workflows/: tests.yml
benchmarks/: sdss_pr_benchmark.py
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt  tutorials.rst
docs/_templates/autosummary/: class.rst
docs/api/: components.rst  config.rst  custom_components.rst  defaults.rst  fitting.rst  index.rst  model.rst  plotting.rst
docs/notebooks/: 01_jaxqsofit_tutorial.nblink  02_selsing_composite_fit.nblink  03_sdss_j102839_iron.nblink  04_sdss_galaxy.nblink  05_sdss_psf_recalibration_tutorial.nblink  06_custom_components_tutorial.nblink  07_local_sdss_bal_tutorial.nblink
notebooks/: 01_jaxqsofit_tutorial.ipynb  02_selsing_composite_fit.ipynb  03_sdss_j102839_iron.ipynb  04_sdss_galaxy.ipynb  05_sdss_psf_recalibration_tutorial.ipynb  06_custom_components_tutorial.ipynb  06_custom_components_tutorial.md  07_local_sdss_bal_tutorial.ipynb  08_sdss_j221958_fit.ipynb
scripts/: generate_prior_latex_table.py
src/jaxqsofit/: __init__.py  components.py  config.py  core.py  custom_components.py  defaults.py  model.py  plotting.py  results.py
tests/: test_components.py  test_core_api.py  test_custom_components.py  test_custom_line_components.py  test_defaults.py  test_dr7_regression.py  test_imports.py  test_integration_sdss_astroquery.py  test_model_helpers.py  test_sdss_astroquery.py  test_sdss_name_fe_priors.py  test_selsing_composite.py
(+2 files in other folders)
